--- a/teen.html
+++ b/teen.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DRAGS - TRENDING COLLECTION</title>
+    <title>DRAGS - KIDS COLLECTION</title>
     <link rel="stylesheet" href="minimalist.css">
     <script defer src="javascript.js"></script>
     <style>
@@ -129,7 +129,7 @@
                 <ul>
                     <li><a href="dames.html" class="nav-link">WOMEN</a></li>
                     <li><a href="heren.html" class="nav-link">MEN</a></li>
-                    <li><a href="teen.html" class="nav-link">KIDS</a></li>
+                    <li><a href="teen.html" class="nav-link active">KIDS</a></li>
                 </ul>
             </nav>
         </div>
