--- a/heren.html
+++ b/heren.html
@@ -155,33 +155,45 @@
 </section>
 
 <section class="category-grid">
-    <a href="#" class="category-item">
+    <a href="menhoodies.html" class="category-item">
       <img src="menpageplaatjevakverbetered1.jpg" alt="Hoodies">
       <span>HOODIES</span>
     </a>
-    <a href="#" class="category-item">
+    <a href="menjeans.html" class="category-item">
       <img src="menpageplaatjevak2.jpg" alt="Jeans">
       <span>JEANS</span>
     </a>
-    <a href="#" class="category-item">
+    <a href="mentshirts.html" class="category-item">
       <img src="menpageplaatjevak3.jpg" alt="T-Shirts">
       <span>T-SHIRTS</span>
     </a>
-    <a href="#" class="category-item">
+    <a href="mensweaters.html" class="category-item">
       <img src="menpageplaatjevak5.jpg" alt="SWEATERS">
       <span>SWEATERS</span>
     </a>
-    <a href="#" class="category-item">
+    <a href="menaccessoires.html" class="category-item">
       <img src="menpageplaatjevak6.jpg" alt="Accessoires">
       <span>ACCESSOIRES</span>
     </a>
-    <a href="#" class="category-item">
+    <a href="menfragrances.html" class="category-item">
         <img src="menpageplaatjevak4.jpg" alt="Frangrances">
         <span>FRAGRANCES</span>
       </a>
   </section>
 
-
+  <!-- GET THE LOOK blok + Rate us! knop -->
+  <section class="get-the-look-row">
+    <div class="get-the-look-left">
+      <span class="arrow">&#8594;</span>
+      <span class="get-the-look-title">GET THE LOOK</span>
+      <span class="get-the-look-desc">
+        Get inspired by our gallery and share your looks on social media with
+        <a href="https://instagram.com" target="_blank" class="drags-link">@DRAGS</a>
+        and <strong>#DRAGSSTYLE</strong>.
+      </span>
+    </div>
+    <a href="review.html" class="rate-us-btn">Rate us!</a>
+  </section>
 
 <!-- Footer -->
 <footer>
