--- a/winkelwagen.html
+++ b/winkelwagen.html
@@ -175,6 +175,13 @@
     </section>
 </main>
 
+<!-- Toegevoegd: Problemen? tekst en contact us link boven de footer-lijn -->
+<div style="position: relative; width: 100%;">
+    <div style="position: absolute; left: 24px; bottom: 100%; margin-bottom: 12px; display: flex; flex-direction: column; align-items: flex-start;">
+        <span style="font-weight: bold; font-size: 1.35em;">Having problems?</span>
+        <a href="contact.html" style="font-weight: 500; color: #111; text-decoration: underline; text-decoration-color: #111; font-size: 1em; margin-top: 2px;">contact us!</a>
+    </div>
+</div>
 <footer>
     <div class="footer-line"></div>
     <div class="footer-links">
@@ -199,6 +206,7 @@
     </div>
     <div class="footer-copy">© 2025 DRAGS</div>
 </footer>
+<!-- ...existing code... -->
 </body>
 </html>
 
