--- a/product.html
+++ b/product.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DRAGS - your Style, your Comfort</title>
+    <title>DRAGS - Product Details</title>
     <link rel="stylesheet" href="minimalist.css">
     <script defer src="javascript.js"></script>
     <style>
-        :root {
-            --footer-socials-margin-right: 20px; /* Adjust this value as needed */
-        }
         html, body {
             height: 100%;
-            min-height: 100vh;
             margin: 0;
-            padding: 0;
+            display: flex;
+            flex-direction: column;
         }
         body {
             min-height: 100vh;
             display: flex;
             flex-direction: column;
+        }
+        main {
+            flex: 1;
         }
         /* Sidebar font verbeteren */
         #sidebar {
@@ -40,6 +40,22 @@
             transform: translateX(6px);
             border-bottom: 2px solid #e0e0e000;
             /* geen kleurverandering */
+        }
+        /* Logo link moet eruitzien als tekst, niet als link */
+        .logo {
+            color: inherit;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .logo:visited {
+            color: inherit;
+        }
+        /* Hover animatie voor CHECK-OUT knop */
+        .checkout-btn {
+            transition: transform 0.18s cubic-bezier(.4,0,.2,1);
+        }
+        .checkout-btn:hover {
+            transform: scale(1.07);
         }
         /* Footer socials helemaal rechts onder */
         footer {
@@ -87,29 +103,26 @@
                 margin-top: 0;
             }
         }
-        /* Zorg dat de footer altijd onderaan staat */
-        main, .categories, header {
-            flex-shrink: 0;
-        }
-        .categories {
-            flex: 1 0 auto;
+    </style>
+    <style>
+        :root {
+            --footer-socials-margin-right: 20px; /* Adjust this value as needed */
         }
     </style>
 </head>
 <body>
 
-<!-- Navigatieknoppen (Menu + Winkelwagen samen) -->
+<!-- Navigatieknoppen (Menu + Winkelwagen) -->
 <div class="nav-buttons">
     <button id="menu-toggle">
         <img src="menu_knop.png" alt="Menu" class="menu-icon">
     </button>
-    
     <a href="winkelwagen.html" id="cart-button">
         <img src="winkelwagen_transparent.png" alt="Winkelwagen" class="cart-icon">
     </a>
 </div>
 
-<!-- Zijbalk Menu (Rechts) -->
+<!-- Zijbalk Menu -->
 <nav id="sidebar">
     <ul>
         <li class="sidebar-title">    </li>
@@ -120,67 +133,6 @@
         <li class="sidebar-title">SHOP</li>
         <li><a href="dames.html">Women</a></li>
         <li><a href="heren.html">Men</a></li>
-        <li><a href="teen.html">Kids</a></li>        
-            </ul>
-        </li>
-      
+        <li><a href="teen.html">Kids</a></li>
     </ul>
 </nav>
-
-    <!-- Titel en slogan -->
-    <header>
-        <h1>D R A G S</h1>
-        <p>your Style, your Comfort</p> 
-    </header>
-
-    <!-- Categorieën met grote afbeeldingen -->
-    <section class="categories">
-    <div class="category">
-        <a href="dames.html">
-            <img src="dames.JPG" alt="Dames Mode">
-            <div class="overlay-text">WOMEN</div>
-        </a>
-    </div>
-    <div class="category">
-        <a href="heren.html">
-            <img src="men.jpg" alt="Heren Mode">
-            <div class="overlay-text">MEN</div>
-        </a>
-    </div>
-    <div class="category">
-        <a href="teen.html">
-            <img src="kids.jpg" alt="Teen Mode">
-            <div class="overlay-text">KIDS</div>
-        </a>
-    </div>
-</section>
-
-    <footer>
-        <div class="footer-line"></div> <!-- Hier komt de scheidingslijn -->
-        <div class="footer-links">
-            <a href="#">Algemene voorwaarden</a>
-            <span>•</span>
-            <a href="#">Privacybeleid</a>
-            <span>•</span>
-            <a href="#">Cookies</a>
-            <span>•</span>
-            <a href="#">Sitemap</a>
-            <span>•</span>
-            <span class="footer-language">
-                <a href="#">English</a> | <a href="#">Nederlands</a>
-            </span>
-        </div>
-        <div class="footer-socials">
-            <a href="#"><img src="facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="twitter.png" alt="Twitter"></a>
-            <a href="#"><img src="instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="pinterest.png" alt="Pinterest"></a>
-            <a href="#"><img src="tiktok.png" alt="TikTok"></a>
-        </div>
-        <div class="footer-copy">© 2025 DRAGS</div>
-    </footer>
-
-
-</body>
-</html>
-
