--- a/heren.html
+++ b/heren.html
@@ -161,7 +161,7 @@
     </a>
     <a href="menjeans.html" class="category-item">
       <img src="menpageplaatjevak2.jpg" alt="Jeans">
-      <span>JEANS</span>
+      <span>Pants</span>
     </a>
     <a href="mentshirts.html" class="category-item">
       <img src="menpageplaatjevak3.jpg" alt="T-Shirts">
